--- a/sample-shells/simple-shell/config.properties
+++ b/sample-shells/simple-shell/config.properties
@@ -1,4 +1,3 @@
-<!-- 
 #-------------------------------------------------------------------------------
 # Copyright (c) 2012 Patrick Mueller
 #
@@ -14,12 +13,15 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #-------------------------------------------------------------------------------
--->
 
-<h1>simple-html sample</h1>
+name:                    simple shell sample
 
-<img src="off-site-128x128.png">
+id:                      org.muellerware.offl-shell.simple-shell
+version:                 0.0.1
 
-<p>Second page!
+status-bar-style:        default
+format-telephone:        yes
 
-<p>Go to the <a href="page-1.html">first page</a>
+viewport-user-scalable:  yes
+viewport-initial-scale:  1.0
+viewport-device-width:   device-width
