--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     {
       "coffee-script": "=1.2.0",
       "nopt":          "=1.0.10",
-      "uglify-js":     "=1.2.5"
+      "uglify-js":     "=1.2.5",
+      "underscore":    "=1.3.1"
     },
   "main" :             "./lib/cli",
   "bin":
